--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Discord Bot Configuration.
+.# Discord Bot Configuration.
 DISCORD_TOKEN=your_bot_token_here(I won't share mine 💀💀💀)
 GUILD_ID=1263067254153805905 # For faster slash command registration during development
 
